********** SPL 1.5 Alpha 4 **********
===== Build 0059 2019/04/09 =====

* Performance optimization:
    * Removed the cwf updates in every evaluation:
        * Increase execution speed for about 19%
* Bug fixes:
    * Fixed that the parser did not recognize type notation ':'
    * Fixed that binary expressions sometimes not linked

********** SPL 1.5 Alpha 3 **********
===== Build 0058 2019/04/09 =====

* New syntax:
    * Anonymous call operator '=>' is deprecated
    * Builder structure now works in SPL
* Structural optimization:
    * Changed the method of calling a function
* Bug fixes:
    * Directly return an inner function inside function did not work

********** SPL 1.5 Alpha 2 **********
===== Build 0057 2019/04/06 =====

* New syntax:
    * Ternary operator:
        * Conditional operator: "cond ? if_true : if_false"
* Import optimization:
    * The duplicate import will now not be executed
* Performance optimization:
    * Optimized variable scopes:
        * Increase execution speed for about 33%

********** SPL 1.5 Alpha 1 **********
===== Build 0056 2019/04/01 =====

* Abandoned less-useful features:
    * Strong type annotation
    * Array
    * Manual memory management
* Optimization:
    * Removed spl_optimizer
    * Deleted the intermediate abstract syntax tree node of numbers
* New syntax:
    * Custom unary operators for spl classes
    * Custom indexing for spl classes
* Bug fixes:
    * Exception caught is not accessible

********** SPL 1.4 Beta 4 **********
===== Build 0055 2019/03/21 =====

*Added support for strong type notation
*Every spl objects now extend the class 'Object'
*Bug fixes:
    *Fixed that the optimizer causes error since build 0053

********** SPL 1.4 Beta 3 **********
===== Build 0054 2019/03/18 =====

*Added some documents
*Variable scope modification:
    *Duplicate variable in different main scope is allowed.

********** SPL 1.4 Beta 2 **********
===== Build 0053 2019/03/17 =====

*Structural optimization: