@@ -1,1 +1,7 @@
-# SPL
+# Slowest Programming Language
+
+###### _Product of Trash Software Studio_
+
+## Getting Started
+
+_**Slowest Programming Language**_ (**SPL**)
