@@ -1,7 +1,0 @@
-class Integer {
-    var value;
-
-    function Integer(v) {
-        value = v;
-    }
-}
