@@ -1,3 +1,15 @@
+********** SPL 1.5 Beta 1 **********
+===== Build 0060 2019/04/10 =====
+
+* Function changes:
+    * The 'StringBuilder.append' method now returns the object itself
+    * The 'Thread' constructor now take the target itself
+* New interpreter options:
+    * Save and load linked spl file as '.lsp'
+    * Full command line options started by '--'
+* Bug fixes:
+    * Name 'Object' is now forbidden for class names
+
 ********** SPL 1.5 Alpha 4 **********
 ===== Build 0059 2019/04/09 =====
 
